<resources>
    <string name="slogan">Chúc bạn một chuyến đi an toàn</string>
    <string name="ok">OK</string>
    <string name="cancel">Huỷ</string>
    <string name="camera_setting_title">Cài đặt</string>
    <string name="error_network_unknown">Không có mạng</string>
    <string name="error_network_timeout">Mất kết nối</string>
    <string name="error_network_unavailable">Không có mạng</string>
    <string name="emergency_alert_setting_title">Cảnh báo khẩn cấp</string>
    <string name="navigation_drawer_open">Mở điều hướng</string>
    <string name="navigation_drawer_close">Đóng điều hướng</string>
    <string name="menu_me">Chủ xe</string>
    <string name="menu_album">Bộ sưu tập</string>
    <string name="menu_wallet">Ví điện tử</string>
    <string name="settings">Cài đặt</string>
    <string name="log_in">Đăng nhập</string>
    <string name="setting_item_camera">Camera</string>
    <string name="add_new_camera">Thêm camera</string>
    <string name="edit_camera">Sửa camera</string>
    <string name="set_up_camera">Cài đặt camera</string>
    <string name="setting_item_about">Giới thiệu</string>
    <string name="setting_item_clean_cache">Xoá bộ nhớ cache</string>
    <string name="setting_item_feedback_camera">Hỗ trợ kỹ thuật</string>
    <string name="setting_item_faq">Câu hỏi thường gặp</string>
    <string name="faq_request_1">Hướng dẫn kết nối nguồn AutoSecure?</string>
    <string name="faq_response_1">Kết nối nhanh chóng với các cách sau: Kết nối dây trực tiếp sẽ có 3 đầu dây:1) Dây ổn định2) Dây ACC (để xác định xe nổ máy)3) Dây nối đấtSản phẩm sẽ được đính kèm hướng dẫn lắp đặt cụ thể Bất kỳ ai quen thuộc với hệ thống điện ô tô đều có thể lắp kiểu dây trực tiếp. Nếu chưa chắc chắn bạn có thể đi đến các gẩge được chúng tôi giới thiệu để nhờ hỗ trợ</string>
    <string name="watch_video_tutorial">Xem video hướng dẫn</string>
    <string name="faq_request_2">Chế độ ghi hình của MK Vision AutoSecure?</string>
    <string name="faq_response_2">Video được quay ở hai chế độ, chế độ lái xe và chế độ đỗ xe. AutoSecure tự động chuyển đổi giữa các chế độ này. Khi ở chế độ đỗ xe, tính năng tiết kiệm điện thông minh của AutoSecure giúp chiếc xe của bạn luôn được giám sát mà vẫn không làm tiêu hao quá nhiều điện từ ắc quy. Khi phát hiện một sự kiện như va chạm hoặc đột nhập, AutoSecure sẽ tự khởi động và ghi lại sự kiện đó, sau đó sẽ quay về chế độ "ngủ" và chờ sự kiện tiếp theo. Khi ở chế độ lái xe, camera sẽ ghi hình ở chế độ vòng lặp. Nếu Autosecure phát hiện điều bất thường, chẳng hạn như một vụ va chạm, một video nổi bật sẽ tự động được tạo để người dùng dễ dàng xác định vị trí. Với kết nối 4G, video nổi bật này ngay lập tức được tải lên MK Vision Cloud.</string>
    <string name="faq_request_3">Autosecure quản lý bộ nhớ trên thẻ microSD như thế nào?</string>
    <string name="faq_response_3">Để lưu trữ video trên Autosecure, MK Vision đề xuất sử dụng thẻ SD độ bền cao (thẻ MicroSD MLC class 10 trở lên) với dung lượng tối thiểu là 32GB, tối đa có thể lên đến 256GB. Trong chế độ lái xe, Autosecure ghi video theo vòng lặp, tức là camera sẽ tự động ghi đè các data cũ khi bộ nhớ đầy. Các video về sự kiện nổi bật do người dùng chỉ định cũng sẽ theo chế độ vòng lặp, nhưng không thể bị ghi đè bởi những data lái xe thông thường. Để đảm bảo lưu giữ những bằng chứng quan trọng, cần phân bổ tối thiểu 8GB cho các data này. Khi kết nối 4G, tất cả data sự kiện đã ghi cũng được tự động tải lên MK Vision Cloud theo thời gian thực.</string>
    <string name="get_more_answers"><u>Câu hỏi khác</u></string>
    <string name="need_more_help">Cần trợ giúp</string>
    <string name="get_help">Diễn đàn</string>
    <string name="contact_support">Liên hệ hỗ trợ</string>
    <string name="report_an_issue">Báo lỗi</string>
    <string name="report_an_issue_"><u>Báo lỗi</u></string>
    <string name="watch_support_video">Xem video hướng dẫn</string>
    <string name="support">Hỗ trợ</string>
    <string name="report_issues">Báo lỗi</string>
    <string name="report_title_activity">Báo lỗi</string>
    <string name="camera_log_tips">Nhật ký camera chỉ khả dụng qua kết nối Wifi</string>
    <string name="which_camera">Lỗi xảy ra trên camera %s</string>
    <string name="secure360_app">Ứng dụng Autosecure</string>
    <string name="fleet_app">Ứng dụng Fleet</string>
    <string name="network_error_title">Đã có lỗi xảy ra</string>
    <string name="network_error_content">Vui lòng kiểm tra kết nối mạng của bạn và thử lại.</string>
    <string name="setting_item_log_out">Đăng xuất</string>
    <string name="logout_confirm">Đăng xuất khỏi tài khoản của bạn?</string>
    <string name="toolbar_alerts">Cảnh báo</string>
    <string name="toolbar_messages">Tin nhắn</string>
    <string name="mark_all_alert">Đánh dấu tất cả đã đọc?</string>
    <string name="empty_alert">Không có cảnh báo</string>
    <string name="no_notification">Không có thông báo</string>
    <string name="no_notification_tips">Không có data báo cáo</string>
    <string name="empty_alert_tips">Cảnh báo từ Autosecure 4G sẽ có ở đây</string>
    <string name="wifi_camera_alerts">Chỉ khi kết nối 4G cho camera bạn mới có thể nhận thông báo sự kiện qua MK Vision Cloud</string>
    <string name="learn_more">Tìm hiểu thêm</string>
    <string name="available_with_fourg">Kết nối 4G cho phép bạn:</string>
    <string name="automatic_event_uploading">Tải lên sự kiện tự động</string>
    <string name="realtime_event_notifications">Thông báo sự kiện thời gian thực</string>
    <string name="live_video_streaming">Phát video trực tiếp</string>
    <string name="empty_album_tips">Xem videos đã xuất</string>
    <string name="action_settings">Cài đặt</string>
    <string name="login_title">Đăng nhập Fleet</string>
    <string name="email">Email</string>
    <string name="account">Tài khoản</string>
    <string name="login_placeholder_password">Mật khẩu</string>
    <string name="login_lead_to_register">Tạo tài khoản</string>
    <string name="new_fleet_title">Tạo Fleet</string>
    <string name="check_serial_title">Kiểm tra Camera S/N</string>
    <string name="btn_check">Kiểm tra</string>
    <string name="email_error">Nhập một địa chỉ email hợp lệ</string>
    <string name="password_error">Mật khẩu phải có ít nhất 8 ký tự, số và chữ cái</string>
    <string name="log_in_manager">Đăng nhập của người quản lý</string>
    <string name="skip_log_in">Bỏ qua đăng nhập của lái xe</string>
    <string name="login_forget_password">Quên mật khẩu?</string>
    <string name="login_buttons_forgot_password_html">&lt;u&gt;Quên mật khẩu?&lt;/u&gt;</string>
    <string name="login_errors_unable_to_log_in">Không thể đăng nhập.</string>
    <string name="login_errors_does_not_match">Tài khoản hoặc mật khẩu không chính xác.</string>
    <string name="forget_password">Quên mật khẩu</string>
    <string name="forget_password_back">Quay lại</string>
    <string name="forget_password_next">Kế tiếp</string>
    <string name="signup_button">Đăng ký</string>
    <string name="waylens_agreement">Thỏa thuận MK Vision</string>
    <string name="waylens_agreement_underline"><u>Thỏa thuận MK Vision</u></string>
    <string name="video_sd_card">Thẻ SD</string>
    <string name="video_cloud">Cloud</string>
    <string name="setup_meet_problems">&lt;u&gt;Bạn gặp phải sự cố?&lt;/u&gt;</string>
    <string name="setup_first_plug_in">Cắm dây nguồn và khởi động xe của bạn.</string>
    <string name="setup_first_red_light">Đèn sáng</string>
    <string name="setup_continue">Tiếp tục</string>
    <string name="setup_second_wifi_setting">Đi tới Cài đặt Wifi</string>
    <string name="setup_second_instruction">Tìm mật khẩu Wifi trên nhãn sản phẩm. Kết nối điện thoại của bạn với "MK Vision-XXXXX" và Quay lại ứng dụng này.</string>
    <string name="setup_third_input_name">Đặt tên cho camera của bạn</string>
    <string name="setup_third_done">Hoàn thành</string>
    <string name="setup_third_camera_name">Tên camera</string>
    <string name="setup_default_name">Autosecure</string>
    <string name="camera_setting_parking_alert_title">Cảnh báo: Phát hiện chuyển động</string>
    <string name="camera_setting_parking_alert_content">Gửi thông báo cho bạn khi phát hiện va chạm và chuyển động.</string>
    <string name="camera_setting_parking_upload_title">Tải lên: Sự kiện va chạm</string>
    <string name="camera_setting_parking_upload_content">Tải các sự kiện lên đám mây dưới dạng bản sao trong trường hợp bị đâm mạnh.</string>
    <string name="emergency_alert_setting_title_off">Cảnh báo khẩn cấp: Tắt</string>
    <string name="emergency_alert_setting_content_off">Không cần liên hệ với mọi người khi trường hợp khẩn cấp xảy ra.</string>
    <string name="camera_setting_drive">Lái xe</string>
    <string name="camera_setting_park">Đỗ xe</string>
    <string name="left">Trái</string>
    <string name="right">Phải</string>
    <string name="video_type_motion">Chuyển động</string>
    <string name="video_type_bump">Va chạm</string>
    <string name="video_type_highlight">Nổi bật</string>
    <string name="video_type_buffered">Data đệm</string>
    <string name="guide_export_info">Các video được dán nhãn bằng các màu khác nhau tùy theo loại của chúng.</string>
    <string name="type_buffered_info">Hiển thị video được quay khi xe đang bật hoặc phát trực tiếp</string>
    <string name="type_motion_info">Hiển thị chuyển động được phát hiện gần xe đang đỗ</string>
    <string name="type_bump_info">Hiển thị va chạm xảy ra khi xe đang đỗ hoặc đang lái xe</string>
    <string name="type_impact_info">Hiển thị va chạm mạnh khi xe đang đỗ hoặc đang đi</string>
    <string name="type_behavior_info">Hiển thị hành vi lái xe ẩu bao gồm cua gấp, phanh gấp và tăng tốc đột ngột</string>
    <string name="type_highlight_info">Hiển thị các clip do người dùng đánh dấu</string>
    <string name="_8_20_am">8:20 AM</string>
    <string name="_8_16_am">8:16 AM</string>
    <string name="_8_05_am">8:05 AM</string>
    <string name="_5_01_am">5:01 AM</string>
    <string name="type_location_1">40 đường Nguyễn Trãi, Quận Thanh Xuân, TP Hà Nội</string>
    <string name="type_location_2">1300 phố Duy Tân, Quận Cầu Giấy, TP Hà Nội</string>
    <string name="type_location_3">2300 đường Phan Chu Trinh, Quận 1, TP Hồ Chí Minh</string>
    <string name="impact">Đâm đụng</string>
    <string name="behavior">Hành vi</string>
    <string name="how_will_the_vehicles_trigger_the_geo_fence">Các xe sẽ kích hoạt hàng rào địa lý như thế nào?</string>
    <string name="enter">Đi vào</string>
    <string name="exit">Đi ra</string>
    <string name="specific_vehicles">Tên xe</string>
    <string name="all_vehicles_in_the_fleet">Tất cả các xe trong Fleet</string>
    <string name="all_vehicles_in_the_fleet_are_included_including_vehicles_added_to_the_fleet_later">Tất cả các xe trong Fleet đều được đưa vào, kể cả những xe được bổ sung vào Fleet sau này.</string>
    <string name="which_vehicles_will_trigger_the_geo_fence">Những xe nào sẽ kích hoạt hàng rào địa lý?</string>
    <string name="_3_input_the_vehicle_information">3 Nhập thông tin xe</string>
    <string name="input_the_side_of_the_vehicle_rudder">Vô lằng bên trái hay bên phải</string>
    <string name="choose_the_type_closest_to_yoru_vehicle_in_driver_cabin_size">Chọn loại gần giống với kích thước cabin xe của bạn </string>
    <string name="truck">Xe tải</string>
    <string name="large_suv_pickup">SUV/ Bán tải cỡ lớn </string>
    <string name="car_small_suv">Xe hơi/ SUV cỡ nhỏ</string>
    <string name="_3_5">3/5</string>
    <string name="_1_please_connect_your_phone_to_camera_wifi">1 Vui lòng kết nối điện thoại của bạn với Wi-Fi của camera.</string>
    <string name="you_can_find_the_wifi_name_and_wifi_password_on_the_screen_of_the_camera">Bạn có thể tìm thấy tên Wi-Fi và mật khẩu Wi-Fi trên màn hình của camera.</string>
    <string name="use_your_phone_to_connect_to_the_camera_s_wifi">Sử dụng điện thoại của bạn để kết nối với WiFi của camera</string>
</resources>