<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mk.autosecure.ui.fragment.ThirdCalibFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3_input_the_vehicle_information"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/input_the_side_of_the_vehicle_rudder"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_14" />

        <RadioGroup
            android:id="@+id/rg_input_side"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_side_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/sp_14" />

            <RadioButton
                android:id="@+id/rb_side_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/right"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/sp_14" />
        </RadioGroup>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_margin="@dimen/dp_20"
        android:background="@color/colorBackgroundWhite" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_25"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_the_type_closest_to_yoru_vehicle_in_driver_cabin_size"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_14" />

        <RadioGroup
            android:id="@+id/rg_choose_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_type_truck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/truck"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/sp_14" />

            <RadioButton
                android:id="@+id/rb_type_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/large_suv_pickup"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/sp_14" />

            <RadioButton
                android:id="@+id/rb_type_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/car_small_suv"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/sp_14" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_input_next"
            style="@style/BorderButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:text="@string/forget_password_next" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_14"
            android:layout_marginBottom="@dimen/dp_47"
            android:text="@string/_3_5"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>

</LinearLayout>
